# lidar_3d_sensor

./: .gitignore  CMakeLists.txt  ReadME.md
Docker/: Dockerfile
assets/models/velodyne_dummy/: model.config  model.sdf
assets/worlds/: cafe.world
configs/: lidar.rviz
include/: lidar_3d_sensor.hpp
scripts/: build_docker.sh  launch_docker.sh  launch_gazebo.sh
src/: lidar_3d_sensor.cpp
